# arkoi_fs_ext

./: .gitignore  CMakeLists.txt  README.md
include/arkoi_fs_ext/: cursor.h  ext2.h  ext2.hpp
src/arkoi_fs_ext/: cursor.c  ext2.c
tests/: CMakeLists.txt
tests/arkoi_fs_ext/: ext2.cpp
tests/fixtures/: bad_magic.img  valid.img
